--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
+.main{
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  padding: 90px 0 90px 0;
+  background-color: rgb(214, 210, 210);
 }
 
-.App-link {
-  color: #61dafb;
+.sub-main{
+  display: flex;
+  justify-content: center;
+  height: 400px;
+  width: 30%;
+  box-shadow: 12px 11px 11px 10px rgb(118, 115, 115);
+  padding-top: 20px;
+  border-radius: 50px;
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image{
+  padding-left:40px;
+  display: flex;
+  justify-content: top;
+}
+
+.container-image{
+  display: flex;
+  background-color: white;
+  align-items: center;
+  border-radius: 100px;
+  height: 130px;
+}
+
+.profile{
+  height: 150px;
+  width: 200px;
+  border-radius: 100px;
+}
+
+input{
+  width: 200px;
+  height: 40px;
+  border-radius: 60px;
+  box-shadow: inset 0px 0px 25px 0px #888;
+  border: none;
+  outline: none;
+  background-color: #fff;
+}
+
+.name{
+  padding-left: 70px;
+  font-size: 20px;
+}
+
+.second-input{
+  padding-top: 20px;
+}
+
+button{
+  width: 250px;
+  height: 40px;
+  border-radius: 60px;
+  background-color: skyblue;
+  color: black;
+  font-size: 20px;
+  border: none;
+}
+
+.login-button{
+  padding-top: 25px;
+}
+
+.link{
+  font-size: 15px;
+  font-weight: 400;
+}
+a{
+   color: blue;
 }
